docs(package.json): change meta

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-chakra-todo",
+  "name": "react-chakra-pokemon-randomizer",
   "version": "0.1.0",
   "author": "TerrniT",
   "license": "MIT",
